--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor="#92bb49"
 backgroundColor="#FFFFFF"
-secondaryBackgroundColor="#b0b6c2"
+secondaryBackgroundColor="#e6e6e6"
 textColor="#081f44"
 font="sans serif"
