--- a/config.yaml
+++ b/config.yaml
@@ -3,8 +3,8 @@ credentials:
     admin:
       email: joao.saraiva@treevia.com.br
       logged_in: False
-      name: João Saraiva
-      password: 12345678
+      name: Joao Saraiva
+      password: admin123
 cookie:
   expiry_days: 1
   key: some_signature_ley
